Mon Feb 18 06:07:13 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java (mustBeScalar):
	  checks if type is an integer, a pointer, or an array (previous
	  #mustBeScalarAlike definition).

	* net/loveruby/cflat/compiler/TypeChecker.java
	  (expectsSameInteger, expectsComparableScalars): return immediately
	  after first error.

	* net/loveruby/cflat/compiler/TypeChecker.java (PrefixOpNode,
	  SuffixOpNode): allow array parameter.

	* net/loveruby/cflat/type/Type.java: new method #isScalar.

	* net/loveruby/cflat/type/IntegerType.java: is a scalar.

	* net/loveruby/cflat/type/ArrayType.java: is a scalar.

	* net/loveruby/cflat/type/PointerType.java: is a scalar.

Mon Feb 18 05:35:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java (checkCond): cond
	  expr might be an array.

	* net/loveruby/cflat/compiler/TypeChecker.java (SwitchNode): cond
	  expr should not be pointer.

	* net/loveruby/cflat/compiler/TypeChecker.java: <</>> expects same
	  integer.

	* net/loveruby/cflat/compiler/TypeChecker.java: comparison
	  operators accept arrays.

	* net/loveruby/cflat/compiler/TypeChecker.java: "!" accepts a
	  pointer and an array.

	* net/loveruby/cflat/compiler/TypeChecker.java: new method
	  #mustBeScalarAlike.

	* net/loveruby/cflat/compiler/TypeChecker.java (mustBeInteger,
	  mustBeScalar, mustBeScalarAlike): takes operator name.

Mon Feb 18 04:10:40 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java (mustBeScalar):
	  array is a scalar.

Mon Feb 18 04:08:46 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: check returning
	  void value.

	* net/loveruby/cflat/compiler/TypeChecker.java: allow array LHS,
	  only when LHS is a parameter.

	* net/loveruby/cflat/ast/Entity.java: define #isParameter here.

	* net/loveruby/cflat/ast/Variable.java: remove #isVariable,
	  #isParameter.
