@@ -1,3 +1,10 @@
+Mon Feb 18 06:12:14 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/TypeChecker.java: TypeTable is
+	  useless.
+
+	* net/loveruby/cflat/compiler/Compiler.java: ditto.
+
 Mon Feb 18 06:07:13 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/TypeChecker.java (mustBeScalar):
